tests/should_fail/match_tuple_on_string.nv
module fail
// Tuple pattern on a string — type mismatch
let s = "hello"
let r = match s {
    (a, b) => "bad",
}
